# anke

./: .env.example  .gitignore  Cargo.toml  License  Readme.md  anke.toml  anke.toml.example  shell.nix  todo.txt
framework/anke-core/: Cargo.toml
framework/anke-core/src/: entry.rs  factory.rs  filter_net.rs  lib.rs  output_filter.rs  pipeline.rs  sieve.rs  state.rs  url.rs
framework/async-bucket/: Cargo.toml
framework/async-bucket/src/: lib.rs
sites/booru/: Cargo.toml
sites/booru/src/: factory.rs  gelbooru.rs  lib.rs
src/: app.rs  config.rs  main.rs
src/filters/: blacklist.rs  dedupe.rs  discord_webhook.rs  files.rs  mod.rs  warning_filter.rs
