[package]
name = "anke"
version = "0.1.0"
edition = "2021"
authors = ["Madeline S. <maddie@cafebabe.date>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anke-core = { path = "framework/anke-core" }
booru = { path = "sites/booru" }
dotenv = "0.15.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.16.1", features = ["io-util"] }
toml = "0.5.8"
tracing = "0.1.30"

[workspace]
members = ["framework/*", "sites/*"]
