[package]
name = "anke-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
color-eyre = "0.5.11"
crossbeam-channel = "0.5.1"
itertools = "0.10.1"
linked-hash-map = "0.5.4"
reqwest = { version = "0.11.6", features = ["json"] }
rusqlite = "0.26.1"
serde_json = "1.0.71"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
async-bucket = { path = "../async-bucket" }