[package]
name = "async-bucket"
version = "0.1.0"
edition = "2021"
license = "ISC"
authors = ["Madeline S. <maddie@cafebabe.date>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
