[package]
name = "booru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anke-core = { path = "../../framework/anke-core" }
async-trait = "0.1.52"
itertools = "0.10.1"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
